playing with Chrome layout bug

--- a/src/assets/styles/Panel.scss
+++ b/src/assets/styles/Panel.scss
@@ -39,6 +39,7 @@
 
   &-logo {
     &-container {
+      z-index: 0;
       display: flex;
       align-items: center;
       position: relative;
